Fixes in distribution